# ansible-role-tftpd

./: .ansible-lint  .pre-commit-config.yaml  .travis.yml  .yamllint.yml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.yml  tasks.yml  tox.ini
.github/workflows/: molecule.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml  requirements.yml
molecule/default/: molecule.yml
molecule/kvm/: molecule.yml
molecule/podman/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
molecule/resources/tests/: test_default.py
molecule/tox/: molecule.yml  requirements.yml
molecule/vbox/: molecule.yml
tasks/: main.yml  tasks.yml
templates/Alpine/: tftpd.j2
templates/Archlinux/: tftpd.j2
templates/Debian/: tftpd.j2
templates/RedHat/: tftpd.j2
templates/Suse/: tftpd.j2
vars/: main.yml
